Fix InvoiceServiceImpl compilation errors and service responsibility separation